# dining-philosophers-problem

./: CMakeLists.txt  README.md
include/: fork.hpp  philosopher.hpp  synchronize_channel.hpp  table.hpp  table_setup.hpp  visualisation.hpp
src/: fork.cpp  main.cpp  philosopher.cpp  table.cpp  visualisation.cpp
